# PA-proj

./: Makefile  Notes.txt  README  README.md  diff  markSweep1.cpp  markSweep2.cpp
Assignment2/: Makefile  Notes.txt  README
Assignment2/handout/: Makefile
Assignment2/sourcecode/: compression.1.bc  compression.linked.bc  helloworld  helloworld.c  part2.a.out
Assignment2/texts/: part1.txt  partEnd.txt
Assignment2/transformations/branchBias/: BranchBias.cpp
Assignment2/transformations/countDynamic/: rtlib.bc  rtlib.cpp  rtlib.ll
sourcecode/: compression.a.out  compression.bc  part1.bc  part1.c
texts/: markSweep.txt  part2.txt
transformations/: CMakeLists.txt
transformations/branchBias/: CMakeLists.txt
transformations/countDynamic/: CMakeLists.txt  CountDynamicInstructions.cpp
transformations/countStatic/: CMakeLists.txt  CountStaticInstructions.cpp
transformations/markSweep/: CMakeLists.txt  MarkSweep.cpp
